Atualizações do novo portfólio

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -54,7 +54,22 @@ display: none;
     }
 
     #mobile_menu.active {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
     }
+
+    #mobile_nav_list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        margin: 12px 0px;
+    }
+}
+
+#mobile_nav_list .nav_item {
+    list-style: none;
+    text-align: center;
 }
 
