--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,9 +11,14 @@ body {
     background-color: #fff9ea;
 }
 
+section {
+    padding: 28px 8%;
+}
+
 .btn-default {
     border: none;
-    display: flex;align-items: center;
+    display: flex;
+    align-items: center;
     justify-content: center;
     background-color: #ffcb45;
     border-radius: 12px;
@@ -27,6 +32,30 @@ body {
 
 .btn-default:hover {
     background-color: #f8d477;
-    
+}
+
+.social-media-buttons {
+    display: flex;
+    gap: 18px;
 
 }
+
+.social-media-buttons a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 40px;
+    background-color: #fff;
+    font-size: 1.25rem;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #1d1d1d;
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow .3s ease;
+}
+
+.social-media-buttons a:hover {
+    box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1); 
+}
+
