--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -59,3 +59,11 @@ section {
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1); 
 }
 
+.section-title {
+    color: #e9a209;
+    font-size: 1.563rem;
+}
+
+.section-subtitle {
+    font-size: 2.1875rem;
+}
