Atualizações do portfólio

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -72,6 +72,10 @@
 
 @media screen and (max-width: 600px) {
     #dish {
-        width: calc(100% - 12px);
+        width: 100%;
+       }
+
+       #menu .section-subtitle {
+        text-align: center;
        }
 }
