--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,13 @@
 @import url('testimonials.css');
 @import url('footer.css');
 
+:root {
+    --color-primary-1: #fff9ea; 
+    --color-primary-2: #ffe8b4;
+    --color-primary-3: #ffe100;
+    --color-primary-4: #ffcb45;
+}
+
 * {
     font-family: 'Kanit' , sans-serif ;
     margin: 0;
@@ -25,7 +32,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffcb45;
+    background-color: var(--color-primary-4);
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
