Atualizações finais do projeto

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,11 +10,11 @@ footer {
 }
 
 #copyright {
-    color: #1d1d1d;
+    color: var(--color-neutral-1);;
     font-weight: 500;
 }
 
-@media screen and (max-width :600px) {
+@media screen and (max-width: 600px) {
     #footer_items {
         flex-direction: column;
         gap: 20px;
