--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -16,7 +16,7 @@ header {
 
 #nav_logo {
     font-size: 24px;
-    color: #e9a209;
+    color: var(--color-primary-6);
 }
 
 #nav_list {
@@ -25,15 +25,15 @@ header {
     gap: 48px;
 }
 
-.nav_item a {
+.nav-item a {
     text-decoration: none;
     color: #1d1d1dad;
     font-weight: 600;
 }
 
-.nav_item.active a {
-    color: #1d1d1d;
-    border-bottom: 3px solid var(--color-primary-3);
+.nav-item.active a {
+    color: var(--color-neutral-1);
+    border-bottom: 3px solid var(--color-primary-4);
 }
 
 #mobile_btn {
@@ -41,14 +41,15 @@ header {
 }
 
 #mobile_menu {
-display: none;
+    display: none;
 }
 
-@media screen and (max-width :1170px) {
-    #nav_list ,
+@media screen and (max-width: 1170px) {
+    #nav_list,
     #navbar .btn-default {
         display: none;
     }
+
     #mobile_btn {
         display: block;
         border: none;
@@ -61,7 +62,6 @@ display: none;
         display: flex;
         flex-direction: column;
         align-items: center;
-
     }
 
     #mobile_nav_list {
@@ -70,10 +70,9 @@ display: none;
         gap: 12px;
         margin: 12px 0px;
     }
-}
 
-#mobile_nav_list .nav_item {
-    list-style: none;
-    text-align: center;
+    #mobile_nav_list .nav-item {
+        list-style: none;
+        text-align: center;
+    } 
 }
-
