--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,11 +14,11 @@
 
 #cta .title {
     font-size: 4rem;
-    color: #1d1d1d;
+    color: var(--color-neutral-1);;
 }
 
 #cta .title span {
-    color: #e9a209;
+    color: var(--color-primary-6);
 }
 
 #cta .description {
@@ -32,16 +32,16 @@
 
 #cta_buttons a {
     text-decoration: none;
-    color: #1d1d1d;
+    color: var(--color-neutral-1);;
 }
 
 #phone_button {
     display: flex;
     gap: 8px;
     align-items: center;
-    background-color: #ffff;
-    font-weight: 500;
+    background-color: #ffffff;
     padding: 8px 14px;
+    font-weight: 500;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
 }
@@ -55,12 +55,12 @@
     align-items: start;
     justify-content: end;
     width: 70%;
+    z-index: 2;
 }
 
 #banner img {
     height: 100%;
     width: fit-content;
-    z-index: 2;
 }
 
 .shape {
@@ -74,7 +74,7 @@
     z-index: 1;
 }
 
-@media screen and (max-width :1170px) {
+@media screen and (max-width: 1170px) {
     #home {
         min-height: 100%;
         padding-top: 0px;
@@ -93,7 +93,7 @@
     }
 }
 
-@media screen and (max-width :450px) {
+@media screen and (max-width: 450px) {
     #phone_button button {
         display: none;
     }
