--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -1,12 +1,12 @@
 #testimonials {
-    min-height: calc(100vh - 9px);
+    min-height: calc(100vh - 91px);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 48px;
 }
 
-#tesimonials_chef {
+#testimonial_chef {
     width: 500px;
     height: auto;
 }
@@ -15,7 +15,7 @@
     font-size: 3rem;
 }
 
-#tesimonials_content {
+#testimonials_content {
     width: 50%;
 }
 
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    background-color: #fff;
+    background-color: var(--color-neutral-0);
     padding: 12px;
     border-radius: 12px;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
@@ -50,10 +50,10 @@
 }
 
 .feedback-content p span {
-    color: #e9a209;
+    color: var(--color-primary-6);
 }
 
-@media screen and (max-width :1170px) {
+@media screen and (max-width: 1170px) {
     #testimonials {
         flex-direction: column;
     }
@@ -63,12 +63,11 @@
         font-size: 2.5rem;
     }
 
-
-    #testimonials_chef {
+    #testimonial_chef {
         display: none;
     }
 
-    #tesimonials_content {
+    #testimonials_content {
         width: 70%;
         display: flex;
         flex-direction: column;
@@ -76,16 +75,16 @@
     }
 }
 
-@media screen and (max-width :600px) {
+@media screen and (max-width: 600px) {
     #testimonials .section-subtitle {
         font-size: 2rem;
-    }
-
-    .feedback {
-        flex-direction: column;
     }
 
     #testimonials_content {
         width: 100%;
     }
-}
+
+    .feedback {
+        flex-direction: column;
+    }
+} 
