--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,7 +13,7 @@
 }
 
 #cta .title {
-    font-size: 4rem;
+    font-size: 3rem;
     color: var(--color-neutral-1);;
 }
 
@@ -22,7 +22,7 @@
 }
 
 #cta .description {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 #cta_buttons {
@@ -44,6 +44,7 @@
     font-weight: 500;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
+    font-size: 15px;
 }
 
 #phone_button button {
