--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -48,6 +48,7 @@ section {
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: background-color .3s ease;
+    font-size: 14px;
 }
 
 .btn-default:hover {
